tests/pass/reference.glu
let { assert }  = import! "std/test.glu"
let prelude  = import! "std/prelude.glu"
let { (==) } = prelude.eq_Int
let { Bool } = import! "std/bool.glu"

let ri = ref 0
assert (0 == load ri)
ri <- 2
assert (2 == load ri)
assert (2 == load ri)
ri <- 10
assert (10 == load ri)
True
