tests/fail/unwrap.glu
let { Option, unwrap }  = import! "std/option.glu"

unwrap None
